added login design

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,17 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-    :root {
-      /* Brand colors */
-      --primary: 255, 179, 11;
-  
-      /* Text and background */
-      --text: 98 106 126;
-      --background: 247, 249, 251;
-  
-      /* radius */
-      --button-radius: 10px;
-    }
+  :root {
+    /* Brand colors */
+    --primary: 255, 179, 11;
+    --secondary: 31, 68, 251;
+
+    /* Text and background */
+    --text: 26 17 0;
+    --background: 247, 249, 251;
   }
+}
